2009-02-26  Esteban Sanchez  <estebans@artica.es>

	* include/functions_events.php: Added get_events() function. Replaced
	"..." with html entity and reuse previously calculated value.

	* include/functions_reporting.php: Fixed get_agent_module_sla() to
	allow no max value to be checked. That was causing some errors on
	monitor reports.

	* operation/agentes/sla_view.php,
	operation/reporting/reporting_xml.php,
	operation/reporting/reporting_viewer.php: Do not use max value on
	monitor SLA.
	
	* operation/events/events.php: Replaced exit for return.

	* include/functions_db.php: Added support for arrays in
	format_array_to_update_sql() that will be transformed to a "IN ()"
	statement.

2009-02-26  Esteban Sanchez  <estebans@artica.es>

	* include/config_process.php, index.php: Added generated timer count as
	a HTML comment at the bottom.

	* include/functions_ui.php: Style correction.

2009-02-26  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Added support for queries elapsed time in
	print_database_debug().

	* operation/events/events.php: Style correction.

	* reporting/fgraph.php: Allow boolean graphics to get a starting date.

	* general/footer.php: Use config['debug'] instead of developer_bypass.

2009-02-25  Esteban Sanchez  <estebans@artica.es>

	* include/functions_ui.php: Fixed typo that makes incorrect argument
	list in debug().

2009-02-25  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/functions_reporting.php: Thanks to Esteban's functions found out
	some bad performers. Fixed it
	
	* include/auth/ldap.php: Calling get_system_time() 800 times is too much.
	Moved it to a variable.

2009-02-25  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Do not show errors on sql_error_handler()
	if debug flag is active. Removed return flag to print_database_debug()
	because it was causing memory allocation errors. For the same reason,
	the table is printed each 100 elements.
	